2007-12-27  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.22.modules: downgraded HAL to 0.5.9
	as gvfs is ok with that version (even though it recommends 0.5.10),
	done as HAL 0.5.10 needs libvolume_id 0.77, which needs udev 111.

2007-12-26  Marko Anastasov  <marko.anastasov@gmail.com>

	* modulesets/gnome-suites-2.22.modules: Fetch glibmm head instead
	of the 2-14 branch.

2007-12-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.22.modules: updated HAL to 0.5.10
	(needed by gvfs) and expat to 1.95.8 (needed by HAL).

2007-12-26  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.20.modules, modulesets/gnome-2.22.modules: removed
	gaim as it has been renamed.  (but Pidgin is waiting for Monotone
	support)  (closes: #505654)

2007-12-23  Olav Vitters  <olav@bkor.dhs.org>

	* modulesets/gnome-external-deps-2.22.modules: Change system-tools-backends
	to version 2.5.4 (instead of 2.5.2).

2007-12-22  William Jon McCann  <mccann@jhu.edu>

	* modulesets/freedesktop.modules: Add PolicyKit-gnome.

2007-12-22  William Jon McCann  <mccann@jhu.edu>

	* modulesets/freedesktop.modules: Add pixman and
	dep for cairo.

2007-12-22  Jaap Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.22.modules:
	Add bluez-gnome. Fixes bug #504951

2007-12-22  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/tinderbox.py, jhbuild/frontends/tinderbox.py: added
	-N (--nopoison) and -C (--try-checkout) support for tinderbox, patch by
	Craig Keogh.

2007-12-22  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/svn.py: added possibility to specify a
	revision number in the revision attribute, not just a branch
	(considered as revision number if it is all digits); patch by Craig
	Keogh  (closes: #504809)

2007-12-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.22.modules: add pixman (module
	splitted out of cairo)  (closes: #504216)

2007-12-22  Frederic Peters  <fpeters@0d.be>
