@@ -1,3 +1,8 @@
+2007-12-28  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/modtypes/waf.py: added hint to jhbuild -m boostrap buildone
+	waf when waf is not found.
+
 2007-12-27  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-external-deps-2.22.modules: downgraded HAL to 0.5.9
